# movie-ticket-search-engine

./: README.md  control-plane.proto  docker-compose.development.yml  docker-compose.yml  movie-ticket-search-engine.code-workspace
api/: Dockerfile  index.ts  package.json
api/grpc/: control-plane_grpc_pb.d.ts  control-plane_grpc_pb.js  control-plane_pb.d.ts  control-plane_pb.js  index.ts
api/scripts/: update-rpc.sh
api/src/: client.ts  controllers.ts  helper.ts  types.ts
control-plane/: Dockerfile  common.py  control_plane_pb2.py  control_plane_pb2.pyi  control_plane_pb2_grpc.py  main.py  pyproject.toml  server.py  test.py  worker_client.py
protos/: control-plane.proto  worker.proto
web/: Dockerfile  package-lock.json  package.json
web/public/: index.html
web/src/: App.tsx  Layout.tsx  index.css  index.tsx
web/src/fetch/: client.ts  tmdb.ts
web/src/helpers/: numbers.ts
web/src/hooks/: client.tsx  index.tsx  tmdb.tsx
web/src/pages/: movieDetails.tsx  movies.tsx
web/src/types/: data.type.ts
worker/: Dockerfile  common.py  control_plane_pb2.py  control_plane_pb2_grpc.py  main.py  pyproject.toml  server.py  test.py  worker_pb2.py  worker_pb2.pyi  worker_pb2_grpc.py
worker/enquiry_bot/: __init__.py  golden_harvest_enquiry_bot.py  mcl_enquiry_bot.py
worker/fetchers/: __init__.py  mcl_fetcher.py
