[tool.poetry]
name = "control-plane"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "control_plane"}]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.51.3"
grpcio-tools = "^1.51.3"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
