[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.2"
autopep8 = "^2.0.2"
aiohttp = "^3.8.4"
requests = "^2.28.2"
pytz = "^2022.7.1"
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"
grpcio = "^1.51.3"
grpcio-tools = "^1.51.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
